# agent-template-msaf

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Makefile  README.md  compose.yml  main.py  mcp-proxy.Dockerfile  pyproject.toml
.github/workflows/: check.yml  publish.yml
tests/: run-agent.sh  send-message.sh
tests/agents/: analyzer.env  data-gatherer.env  research-coordinator.env
