[project]
name = "agent-template-msaf"
version = "0.1.0"
requires-python = ">=3.14,<3.15"
dependencies = [
    "agentic-layer-sdk-msaf>=0.13.4",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "mypy[reports]>=1.12.0,<2",
    "ruff>=0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "main.py"
]

[tool.uv]
prerelease = "allow"

# Comment-in to activate local development path to the MSAF package
#[tool.uv.sources]
#agentic-layer-sdk-msaf = { path = "../sdk-python/msaf", editable = true }
#agentic-layer-sdk = { path = "../sdk-python/shared", editable = true }


[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
# I001 --> enable import sorting rules
# Q --> enable flake8-quotes rules for consistent quote style
# N --> pep8-naming for proper naming conventions
# PT --> flake8-pytest-style for pytest best practices
# TID251 --> banned relative imports
# DTZ --> datetime timezone awareness
extend-select = ["Q", "N", "I001", "PT", "TID251", "DTZ"]


[tool.mypy]
strict = true
